# kyh-gia

backend/: .env.sample  README.md  pyproject.toml  requirements.txt  run.py  vercel.json
backend/backend/: __init__.py  config.py  routes.py
frontend/: .eslintrc.json  README.md  package-lock.json  package.json  tailwind.config.ts
frontend/app/: Clubs.ts  Hours.ts  Schools.ts  globals.css  layout.tsx  page.tsx  zoom-animation.css
frontend/app/auth/callback/google/: page.tsx
frontend/app/auth/forgot-password/: layout.tsx  page.tsx
frontend/app/auth/login/: page.tsx
frontend/app/auth/signup/: layout.tsx  page.tsx
frontend/app/config/: appinfo.ts  frontend.ts
frontend/app/dashboard/admin/: clientPage.tsx  page.tsx
frontend/app/dashboard/club-officer/: layout.tsx  page.tsx
frontend/app/find-your-school/: layout.tsx  page.tsx
frontend/app/schools/[slug]/: page.tsx
frontend/app/your-schools/: page.tsx
frontend/components/: AmadorValleyMap.tsx  Footer.tsx  Navbar.tsx  Particles.tsx  Separator.tsx  SupertokensProvider.tsx  ThemeSwitch.tsx  theme-provider.tsx
frontend/components/ui/: button.tsx  drawer.tsx  input.tsx  select.tsx  typewriter.tsx
frontend/lib/: auth.ts
frontend/public/: manifest.json
